// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Refinement List Filter tests should add disabled state when no results 1`] = `
<div class="sk-panel filter--testid is-disabled">
  <div class="sk-panel__header is-disabled">test title</div>
  <div class="sk-panel__content is-disabled">
    <div class="sk-hierarchical-refinement-list__root">
      <div class="sk-hierarchical-refinement-list__hierarchical-options"></div>
    </div>
  </div>
</div>
`;

exports[`Refinement List Filter tests should render 2nd level and have 1 levels selected correctly 1`] = `
<div class="sk-panel filter--testid">
  <div class="sk-panel__header">test title</div>
  <div class="sk-panel__content">
    <div class="sk-hierarchical-refinement-list__root">
      <div class="sk-hierarchical-refinement-list__hierarchical-options">
        <div>
          <div class="sk-hierarchical-refinement-option sk-hierarchical-refinement-list__item" data-qa="option" data-key="option1">
            <div data-qa="label" class="sk-hierarchical-refinement-option__text">option1</div>
            <div data-qa="count" class="sk-hierarchical-refinement-option__count">#1</div>
          </div>
        </div>
        <div>
          <div class="sk-hierarchical-refinement-option sk-hierarchical-refinement-list__item is-active" data-qa="option" data-key="option2">
            <div data-qa="label" class="sk-hierarchical-refinement-option__text">option2</div>
            <div data-qa="count" class="sk-hierarchical-refinement-option__count">#2</div>
          </div>
          <div class="sk-hierarchical-refinement-list__hierarchical-options">
            <div>
              <div class="sk-hierarchical-refinement-option sk-hierarchical-refinement-list__item" data-qa="option" data-key="option2child1">
                <div data-qa="label" class="sk-hierarchical-refinement-option__text">option2child1</div>
                <div data-qa="count" class="sk-hierarchical-refinement-option__count">#1</div>
              </div>
            </div>
            <div>
              <div class="sk-hierarchical-refinement-option sk-hierarchical-refinement-list__item is-active" data-qa="option" data-key="option2child2">
                <div data-qa="label" class="sk-hierarchical-refinement-option__text">option2child2</div>
                <div data-qa="count" class="sk-hierarchical-refinement-option__count">#1</div>
              </div>
              <div class="sk-hierarchical-refinement-list__hierarchical-options"></div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Refinement List Filter tests should render correctly 1`] = `
<div class="sk-panel filter--testid">
  <div class="sk-panel__header">test title</div>
  <div class="sk-panel__content">
    <div class="sk-hierarchical-refinement-list__root">
      <div class="sk-hierarchical-refinement-list__hierarchical-options">
        <div>
          <div class="sk-hierarchical-refinement-option sk-hierarchical-refinement-list__item" data-qa="option" data-key="option1">
            <div data-qa="label" class="sk-hierarchical-refinement-option__text">option1</div>
            <div data-qa="count" class="sk-hierarchical-refinement-option__count">#1</div>
          </div>
        </div>
        <div>
          <div class="sk-hierarchical-refinement-option sk-hierarchical-refinement-list__item" data-qa="option" data-key="option2">
            <div data-qa="label" class="sk-hierarchical-refinement-option__text">option2</div>
            <div data-qa="count" class="sk-hierarchical-refinement-option__count">#2</div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
